# sqlite-graphrag

./: .gitignore  CHANGELOG.md  CHANGELOG.pt-BR.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.pt-BR.md  CONTRIBUTING.md  CONTRIBUTING.pt-BR.md  Cargo.toml  Cross.toml  INTEGRATIONS.md  INTEGRATIONS.pt-BR.md  LICENSE  README.md  README.pt-BR.md  SECURITY.md  SECURITY.pt-BR.md  deny.toml  gaps.md  llms-full.txt  llms.pt-BR.txt  llms.txt  mutants.toml
.cargo/: config.toml
.config/: nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  embedder-ignore.yml  release.yml
benches/: cli_benchmarks.rs  regression_baseline.rs  retrieval_bench.rs
docs/: AGENTS.md  AGENTS.pt-BR.md  AGENT_PROTOCOL.md  AGENT_PROTOCOL.pt-BR.md  CLAUDE.md  CLAUDE.pt-BR.md  COOKBOOK.md  COOKBOOK.pt-BR.md  CROSS_PLATFORM.md  CROSS_PLATFORM.pt-BR.md  DOCUMENTATION_FRAMEWORK.md  HEADLESS_INVOCATION.md  HEADLESS_INVOCATION.pt-BR.md  HOW_TO_USE.md  HOW_TO_USE.pt-BR.md  MIGRATION.md  MIGRATION.pt-BR.md  PRD.md  PRD.pt-BR.md  TESTING.md  TESTING.pt-BR.md  TEST_PLAN.md  TEST_PLAN.pt-BR.md  TEST_PLAN_v1.0.80.md  TEST_PLAN_v1.0.80_results.md  TEST_PLAN_v1.0.82.md  TEST_PLAN_v1.0.83.md  TEST_PLAN_v1.0.84.md  TEST_PLAN_v1.0.85.md  audit-report-v1.0.25.md  audit-report-v1.0.26.md
docs/adr/: 0001-daemon-warmup-exception.md
docs/decisions/: INDEX.md  adr-0011-oauth-only-enforcement.md  adr-0012-memory-source-enum.md  adr-0013-singleton-scoped-by-db-hash.md  adr-0014-codex-spawn-helper.md  adr-0015-preservation-gate.md  adr-0016-fts5-hardening-flags.md  adr-0017-vec-orphan-handling.md  adr-0018-v1-0-69-status.md  adr-0019-llm-only-one-shot.md  adr-0019-llm-only-one-shot.pt-BR.md  adr-0020-pure-rust-cosine.md  adr-0020-pure-rust-cosine.pt-BR.md  adr-0021-deprecate-daemon.md  adr-0021-deprecate-daemon.pt-BR.md  adr-0022-blob-embeddings.md  adr-0022-blob-embeddings.pt-BR.md  adr-0023-remove-tokenizers.md  adr-0023-remove-tokenizers.pt-BR.md  adr-0024-fts5-coarse-cosine-refine.md  adr-0024-fts5-coarse-cosine-refine.pt-BR.md  adr-0025-oauth-only-embedding.md  adr-0025-oauth-only-embedding.pt-BR.md  adr-0026-v002-vec-tables-migration-drift.md  adr-0026-v002-vec-tables-migration-drift.pt-BR.md  adr-0027-g40-applied-on-null-fix.md  adr-0027-g40-applied-on-null-fix.pt-BR.md  adr-0028-g41-phantom-v013-registration.md  adr-0028-g41-phantom-v013-registration.pt-BR.md  adr-0029-a1-main-lifecycle-flush-deadlock.md  adr-0029-a1-main-lifecycle-flush-deadlock.pt-BR.md  adr-0030-a1-panic-hook-structured.md  adr-0030-a1-panic-hook-structured.pt-BR.md  adr-0031-a1-completions-test-coverage.md  adr-0031-a1-completions-test-coverage.pt-BR.md  adr-0032-g53-lib-api-policy.md  adr-0032-g53-lib-api-policy.pt-BR.md  adr-0033-g53-windows-infra-resilience.md  adr-0033-g53-windows-infra-resilience.pt-BR.md  adr-0034-shutdown-resilience.md  (+58 more)
docs/schemas/: README.md  backup.schema.json  cleanup-orphans.schema.json  codex-models.schema.json  debug-schema.schema.json  deep-research.schema.json  delete-entity.schema.json  edit.schema.json  embedding-list.schema.json  embedding-status.schema.json  enrich-item-event.schema.json  enrich-phase.schema.json  enrich-status.schema.json  enrich-summary.schema.json  entities-input.schema.json  error-envelope.schema.json  export-memory-line.schema.json  export-summary.schema.json  forget.schema.json  fts-check.schema.json  fts-rebuild.schema.json  fts-stats.schema.json  graph-entities.schema.json  graph-recompute-degree.schema.json  graph-stats.schema.json  graph-traverse.schema.json  graph.schema.json  health.schema.json  history.schema.json  hybrid-search.schema.json  ingest-claude-file-event.schema.json  ingest-claude-phase.schema.json  ingest-claude-summary.schema.json  ingest-file-event.schema.json  ingest-summary.schema.json  init.schema.json  link.schema.json  list.schema.json  memory-entities-reverse.schema.json  memory-entities.schema.json  (+32 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_graph_stdin.rs  fuzz_name_validation.rs  fuzz_parse_body.rs
migrations/: V001__init.sql  V002__vec_tables.sql  V006__memory_body_limit.sql  V007__memory_urls.sql  V008__expand_entity_types.sql  V009__expand_memory_types.sql  V010__open_relation_vocabulary.sql  V011__idx_relationships_ns_relation.sql  V012__relationship_timestamps.sql  V013__drop_vec_use_blob_embeddings.sql  V014__pending_memories.sql  V015__pending_embeddings.sql
scripts/: audit-remember-safely.sh  test-loom.sh
skill/neurographrag-en/: SKILL.md
src/: chat_api.rs  chunking.rs  cli.rs  config.rs  constants.rs  daemon.rs  embedder.rs  embedding_api.rs  entity_type.rs  errors.rs  extraction.rs  graph.rs  hash.rs  i18n.rs  json_repair.rs  lib.rs  llm_slots.rs  lock.rs  main.rs  memory_guard.rs  memory_source.rs  namespace.rs  openrouter_http.rs  output.rs  paths.rs  pragmas.rs  preservation.rs  reaper.rs  retry.rs  signals.rs  similarity.rs  stdin_helper.rs  system_load.rs  telemetry.rs  terminal.rs  tokenizer.rs  tz.rs
tests/: binary_size_documented_regression.rs  bug11_preflight_regression.rs  claude_runner_env.rs  cli_db_flag_parity_regression.rs  cli_integration.rs  cli_low_memory.rs  codex_models_json_regression.rs  cold_lock_integration.rs  completions.rs  concurrency_adaptive.rs  concurrency_hardened.rs  concurrency_limit_integration.rs  cookbook_recipes.rs  daemon_integration.rs  doc_contract_integration.rs  embedder.rs  embedding_error_kind_integration.rs  enrich_queue_db_isolation.rs  entity_validation_integration.rs  exit_codes_integration.rs  extract_backend.rs  fusion_determinism_integration.rs  graph_traverse_regression.rs  health_namespace_regression.rs  health_nonexistent_db_regression.rs  health_schema_drift_regression.rs  i18n_bilingual_integration.rs  ingest_auto_describe_regression.rs  ingest_integration.rs  inject_mock_llm.py  installed_binary_smoke.rs  integration.rs  llm_backend_choice.rs  llm_host_slots.rs  lock_integration.rs  loom_lock_slots.rs  migrate_dry_run_regression.rs  mock-opencode  openrouter_chat_real.rs  openrouter_embedding.rs  (+28 more)
(+105 files in other folders)
