[package]
name = "sqlite-graphrag"
version = "1.0.72"
edition = "2021"
rust-version = "1.88"
description = "Local GraphRAG memory for LLMs in a single SQLite file"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/daniloaguiarbr/sqlite-graphrag"
homepage = "https://docs.rs/sqlite-graphrag"
documentation = "https://docs.rs/sqlite-graphrag"
readme = "README.md"
keywords = ["graphrag", "sqlite", "llm", "embeddings", "memory"]
categories = ["command-line-utilities", "database"]
default-run = "sqlite-graphrag"
exclude = [
    ".serena/",
    ".claude/",
    ".vscode/",
    ".idea/",
    "logs/",
    "memory/",
    "docs_rules/",
    "docs_prd/",
    "docs/CLAUDE.md",
    "docs/CLAUDE.pt-BR.md",
    "CLAUDE.md",
    "AGENTS.md",
    "MEMORY.md",
    "ralph-loop.local.md",
    "*.profraw",
    "*.profdata",
    "*.log",
    "graphrag.sqlite",
    "graphrag.sqlite-shm",
    "graphrag.sqlite-wal",
    "*.sqlite",
    "*.sqlite-shm",
    "*.sqlite-wal",
    "gaps.md",
    "fuzz/",
]

[[bin]]
name = "sqlite-graphrag"
path = "src/main.rs"

[[bench]]
name = "cli_benchmarks"
harness = false

[[bench]]
name = "regression_baseline"
harness = false

[[test]]
name = "loom_lock_slots"
path = "tests/loom_lock_slots.rs"

[dependencies]
# rusqlite pinned at 0.37; upgrade to 0.39 deferred — refinery 0.9.1 (currently
# published) constrains rusqlite to ">=0.23, <=0.38" (refinery_core/Cargo.toml at
# v0.9.1). Native SQLite linking forbids two rusqlite versions in the graph
# (see https://stackoverflow.com/questions/69403524). Reassess when a refinery
# release supporting rusqlite 0.39 ships; tracked for v1.0.41.
ahash = "0.8"
mimalloc = { version = "0.1", default-features = false }
rusqlite = { version = "0.37", features = ["bundled", "blob", "load_extension", "functions", "trace", "backup"] }
sqlite-vec = "0.1.9"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
clap = { version = "4.6", features = ["derive", "env"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { version = "0.1", features = ["release_max_level_info", "attributes"] }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "fmt", "ansi", "registry", "tracing-log"] }
refinery = { version = "0.9", features = ["rusqlite"] }
anyhow = "1"
thiserror = "2"
blake3 = "1"
directories = "5"
# fastrand: dependency-free PRNG for jitter (H7+M7); MSRV 1.36, ~30 LOC, no transitive deps
fastrand = "2"
fs4 = { version = "0.9", features = ["sync"] }
interprocess = "2"
regex = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "io-util", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
chrono-tz = "0.10"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
ctrlc = { version = "3.4", features = ["termination"] }
# Pin preventivo — constant_time_eq 0.4.3 bumped MSRV para 1.95.0 em versão patch.
# Entra como dep transitiva de blake3 (range ^0.4). Sem este pin, `cargo install`
# sem --locked resolve 0.4.3 e quebra a instalação em toolchains 1.88..1.94.
# Reavaliar quando CI passar em 1.95 e `rust-version` avançar para 1.95.
constant_time_eq = "=0.4.2"
# parking_lot: faster Mutex + deadlock detection in debug builds (P09 parallelism gap)
parking_lot = "0.12"
libc = "0.2"
rayon = "1.10"
text-splitter = { version = "0.30.1", features = ["markdown", "tokenizers"] }
huggingface-hub = { package = "hf-hub", version = "0.4", default-features = false, features = ["ureq"] }
unicode-normalization = "0.1.25"
ndarray = "0.16"
tempfile = "3"
sys-locale = "0.3"
wait-timeout = "0.2"
which = "7"

[target.'cfg(windows)'.dependencies]
# G29 (v1.0.68): pinned exact to 0.59.0 because HANDLE type changed
# from `isize` (0.48/0.52) to `*mut c_void` (>= 0.59); future patch versions
# could regress again.  Tracked in Cargo.lock via `cargo update -p windows-sys`.
windows-sys = { version = "=0.59.0", features = ["Win32_System_Console"] }

# ort bumped to =2.0.0-rc.12 in v1.0.43 (applied); fastembed bumped to 5.13.4 which
# pins ort=2.0.0-rc.12 upstream. Migration required in `src/embedder.rs`:
#   `ort::execution_providers::CPU` -> `ort::ep::CPU` (namespace reshuffle in rc.12).
# Note: rc.12 lacks a musl prebuilt (verified 2026-05-03 via
# https://github.com/pykeio/ort/blob/v2.0.0-rc.12/ort-sys/build/download/dist.txt),
# so the musl release target was dropped in v1.0.42 (HIGH 1).
[target.'cfg(not(all(target_arch = "aarch64", target_os = "linux", target_env = "gnu")))'.dependencies]
fastembed = { version = "5.13.4", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries-rustls-tls", "image-models"] }
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "tracing", "download-binaries", "tls-rustls", "copy-dylibs"] }

# aarch64-linux-gnu uses load-dynamic; same ort/fastembed versions as above.
[target.'cfg(all(target_arch = "aarch64", target_os = "linux", target_env = "gnu"))'.dependencies]
fastembed = { version = "5.13.4", default-features = false, features = ["hf-hub-rustls-tls", "ort-load-dynamic", "image-models"] }
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "tracing", "load-dynamic"] }

[dev-dependencies]
assert_cmd = "2"
insta = { version = "1", features = ["json"] }
tracing-test = "0.2"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = { version = "1", features = ["std"] }
tempfile = "3"
predicates = "3"
serde_json = "1"
serial_test = "3"
mockall = "0.13"
wiremock = "0.6"
libc = "0.2"
jsonschema = "0.29"
[target.'cfg(sqlite_graphrag_loom)'.dev-dependencies]
# Só compila quando RUSTFLAGS="--cfg sqlite_graphrag_loom" é passado — previne livelock térmico.
# Incidente 2026-04-19: loom ativado sem gate saturou i9-14900KF em Tjmax 100°C.
loom = "0.7"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"
debug = false
overflow-checks = false
incremental = false

[profile.release.package."*"]
opt-level = 3

[profile.bench]
inherits = "release"
debug = 1

[features]
# Opt-in for future heavy tests (stress/exhaustive property tests).
slow-tests = []
# Enable parking_lot deadlock detection thread (10s polling interval).
deadlock-detection = ["parking_lot/deadlock_detection"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(sqlite_graphrag_loom)'] }
